# situation

./: .gitignore  Cargo.toml  README.md  openapi.json  rustfmt.toml  situation.cast
.cargo/: config.toml
docs/: project_structure.md  test.rs
plans/: adapt_to_openapi_update_plan.md  implement_api_calls_plan.md  ui_improvement_plan.md
prompts/: add_change_set_name.txt  add_color_to_changing_entities.txt  add_color_to_names.txt  add_delete_after_create_in_tests.txt  add_log_window.txt  add_luminork_spec.txt  add_new_endpoints_to_plan.md  add_si_dependency.txt  apply_cline_rules_process.md  auto_scroll_logs.txt  check_files_with_rustfmt.md  create_api_spec.md  create_readme.txt  create_rust_tui_app.txt  display_keybindings.txt  display_schemas_request.txt  fetch_change_set_components.md  implement_create_change_set.txt  implement_delete_change_set.txt  implement_force_apply.txt  implement_get_change_set.txt  implement_get_merge_status.txt  implement_list_change_sets.txt  implement_tui_from_openapi.txt  merge_to_main.txt  plan_changes_for_updated_openapi_spec.md  plan_other_api_calls.txt  refactor_selectors_to_dropdowns.txt  split_main_rs.txt  suggest_improvements_request.txt  switch_to_new_changeset.txt  update_docs_request.txt  update_ui_for_changesets.txt  verify_reqwest_client.txt
specs/: api_specification.md  system_specification.txt
src/: api_client.rs  api_models.rs  app.rs  lib.rs  main.rs  refresh_change_sets.rs  run_app.rs  ui.rs
src/api_client/: abandon_change_set.rs  create_change_set.rs  create_component.rs  delete_component.rs  (+10 more)
tests/: api_calls.rs
(+44 files in other folders)
