[package]
name = "situation"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] } # For HTTP requests
dotenvy = "0.15" # For loading .env file
